--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "multipage:server": "ENV=dev TYPE=multipage node ./httpServer/multipage.js",
-    "multipage:build": "ENV=dist TYPE=multipage ./node_modules/.bin/webpack -p --env.ENV=dist --env.TYPE=multipage --config ./multipage/webpack.dist.js",
+    "multipage:build": "ENV=dist TYPE=multipage ./node_modules/.bin/webpack -p --env.ENV=dist --env.TYPE=multipage --config ./src/multipage/webpack.config.js",
     "vue:server": "ENV=dev TYPE=vue node ./httpServer/index.js",
-    "vue:build": "ENV=dist TYPE=vue ./node_modules/.bin/webpack -p --env.ENV=dist --env.TYPE=vue --config ./vue/webpack.dist.js",
+    "vue:build": "ENV=dist TYPE=vue ./node_modules/.bin/webpack -p --env.ENV=dist --env.TYPE=vue --config ./src/vue/webpack.dist.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "symphony2@163.com",
@@ -31,7 +31,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
+    "es3ify-loader": "^0.2.0",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "html-loader": "^0.5.5",
@@ -39,6 +41,7 @@
     "htmllint-loader": "^2.1.4",
     "style-loader": "^0.21.0",
     "transform-runtime": "0.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.11.0",
@@ -61,8 +64,11 @@
     "core-js": "^2.5.7",
     "html5shiv": "^3.7.3",
     "jquery": "^3.3.1",
+    "mmDux": "^1.0.0",
+    "mmRouter": "^0.9.6",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.0",
+    "swig": "^1.4.2",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
